--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "sgt-m4-final",
   "version": "1.0.0",
   "description": "Module 4 Final - Student Grade Table",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/MantisMB/sgt-m4-final/issues"
   },
-  "homepage": "https://github.com/MantisMB/sgt-m4-final#readme"
+  "homepage": "https://github.com/MantisMB/sgt-m4-final#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "mysql2": "^2.0.2",
+    "nodemon": "^2.0.2"
+  }
 }
